# PiPico_nRF24

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
nrf24/: CMakeLists.txt  nrf24.c  nrf24.h  nrf24_master.c  nrf24_slave.c
